lab3 done
