# docs/swagger.yaml
@@ -64,7 +64,7 @@ info:
   title: Manga Store
   version: "1.0"
 paths:
-  /manga/all:
+  /manga/:
     get:
       description: Get a list of all mangas
       produces:
@@ -81,7 +81,109 @@ paths:
       summary: Get all records
       tags:
       - Info
-  /manga/changeDescription:
+    post:
+      description: Adding a new manga to database
+      parameters:
+      - description: Название манги
+        in: body
+        name: Name
+        required: true
+        schema:
+          type: string
+      - description: Рейтинг манги
+        in: body
+        name: Rate
+        required: true
+        schema:
+          type: integer
+      - description: Год производства
+        in: body
+        name: Year
+        required: true
+        schema:
+          type: integer
+      - description: Жанр
+        in: body
+        name: Genre
+        required: true
+        schema:
+          type: string
+      - description: Цена
+        in: body
+        name: Price
+        required: true
+        schema:
+          type: integer
+      - description: Количество серий
+        in: body
+        name: Episodes
+        required: true
+        schema:
+          type: integer
+      - description: Описание
+        in: body
+        name: Description
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.ModelMangaCreated'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ModelError'
+      summary: Add a new manga
+      tags:
+      - Add
+  /manga/{uuid}:
+    delete:
+      description: Delete a manga via its uuid
+      parameters:
+      - description: UUID манги
+        in: query
+        name: UUID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ModelMangaDeleted'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ModelError'
+      summary: Delete a manga
+      tags:
+      - Change
+    get:
+      description: Get a manga via uuid
+      parameters:
+      - description: UUID манги
+        in: query
+        name: UUID
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.ModelMangaDesc'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ModelError'
+      summary: Get manga with corresponding name
+      tags:
+      - Info
     put:
       description: Change a description of manga via its uuid
       parameters:
@@ -109,104 +211,6 @@ paths:
       summary: Change manga description
       tags:
       - Change
-  /manga/create:
-    post:
-      description: Adding a new manga to database
-      parameters:
-      - description: Название манги
-        in: query
-        name: Name
-        required: true
-        type: string
-      - description: Рейтинг манги
-        in: query
-        name: Rate
-        required: true
-        type: integer
-      - description: Год производства
-        in: query
-        name: Year
-        required: true
-        type: integer
-      - description: Жанр
-        in: query
-        name: Genre
-        required: true
-        type: string
-      - description: Цена
-        in: query
-        name: Price
-        required: true
-        type: integer
-      - description: Количество серий
-        in: query
-        name: Episodes
-        required: true
-        type: integer
-      - description: Описание
-        in: query
-        name: Description
-        type: string
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/models.ModelMangaCreated'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ModelError'
-      summary: Add a new manga
-      tags:
-      - Add
-  /manga/delete:
-    delete:
-      description: Delete a manga via its uuid
-      parameters:
-      - description: UUID манги
-        in: query
-        name: UUID
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.ModelMangaDeleted'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ModelError'
-      summary: Delete a manga
-      tags:
-      - Change
-  /manga/find:
-    get:
-      description: Get a manga via name
-      parameters:
-      - description: Название манги
-        in: query
-        name: Name
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.ModelMangaDesc'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/models.ModelError'
-      summary: Get manga with corresponding name
-      tags:
-      - Info
 schemes:
 - http
 - https
